@@ -1,3 +1,8 @@
+2005-04-28  Don Porter  <dgp@users.sourceforge.net>
+
+        * tests/unixInit.test (7.1):    Alternative fix for the
+        2004-11-11 commit.
+
 2005-04-27  Don Porter  <dgp@users.sourceforge.net>
 
 	* library/init.tcl:	Corrected flaw in interactive command
